@@ -411,7 +411,8 @@ Turbosoft 64 KB cartridge
 Turbosoft 128 KB cartridge
 .TP
 .B 51
-MicroCalc 32 KB cartridge.PD
+Ultracart 32 KB cartridge
+.PD
 .RE
 If this option is not given, the user will be asked to choose the cartridge
 type when the emulator starts.
